--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,11 @@
 /*HEADER*/
 
-* {
-    border: 1px solid red;
+html,
+body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -192,6 +196,7 @@ a:active {
 #navigation {
     height: 50px;
     background-color: #4d4c72;
+    padding-top: 5px;
 }
 
 .nav-icons {
@@ -799,6 +804,7 @@ textarea {
         margin-right: 600px;
     }
     #navigation {
+        position: absolute;
         width: 70px;
         min-height: 100vh;
     }
@@ -810,6 +816,7 @@ textarea {
         top: 80px;
         margin-left: 90px;
     }
+    /*
     .wrap {
         top: 120px;
         left: 79%;
@@ -825,7 +832,7 @@ textarea {
         position: absolute;
         top: 250px;
     }
-    .traffic {}
+   
     #myChart {
         max-height: 45vh;
         max-width: 45vw;
@@ -901,4 +908,5 @@ textarea {
     #send {
         width: 360px;
     }
+    */
 }
