aligned settings container

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -871,10 +871,9 @@
                 width: 360px;
             }
             .settings-container {
-                position: absolute;
-                top: -57%;
-                left: 400px;
-                margin: 0;
-                padding: 0;
+                position: relative;
+                top: -160em;
+                left: 450px;
+                width: 10em;
             }
         }
