--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,4 @@
-        /*HEADER*/
+                /*HEADER*/
         
         html,
         body {
@@ -56,7 +56,7 @@
             -webkit-transform: rotate(90deg);
             position: absolute;
             width: 50px;
-            left: 57%;
+            left: 55%;
             top: 5%;
             margin-bottom: -1px;
         }
@@ -95,7 +95,7 @@
             height: 200px;
             position: absolute;
             top: 60px;
-            left: 134px;
+            left: 110px;
             background: #FFF;
             border: solid 1px rgba(100, 100, 100, .20);
             -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, .20);
@@ -678,7 +678,7 @@
                 font-size: 25px;
             }
             #hr {
-                right: 150px;
+                right: 130px;
                 top: 26px;
             }
             .messagebar-default {
@@ -776,104 +776,107 @@
                 right: 190px;
                 width: 2%;
             }
-        }
-        
-        @media (min-width: 1024px) {
-            #hr {
-                right: -140px;
+            #notifications {
+                left: 500px;
             }
-            .appname {
-                font-size: 30px;
-                margin-right: 600px;
-            }
-            #navigation {
-                position: fixed;
-                top: 0;
-                padding-top: 60px;
-                z-index: -1;
-                width: 70px;
-                min-height: 100vh;
-            }
-            .nav-icons {
-                flex-direction: column;
-            }
-            .dash {
-                font-size: 18px;
-                top: 80px;
-                margin-left: 90px;
-            }
-            .wrap {
-                top: 100px;
-                left: 80%;
-            }
-            .messagebar-default {
-                text-align: center;
-                width: 70%;
-                top: 2%;
-                left: 8%;
-            }
-            .traffic-navigation {
-                margin-right: -24%;
-                margin-bottom: -2%;
-            }
-            #myChart {
-                margin-left: -26%;
-                max-height: 45vh;
-                max-width: 45vw;
-            }
-            #myDoughnutChart {
-                max-height: 60vh;
-                max-width: 20vw;
-                margin-top: -25%;
-                margin-right: -60%;
-            }
-            .mobile {
-                position: absolute;
-                margin-right: -100%;
-                top: -250px;
-            }
-            .daily {
-                margin-left: 12%;
-            }
-            .social-widgets {
-                flex-direction: row;
-                justify-content: space-between;
-            }
-            .social-widgets li {
-                margin-left: 50px;
-                margin-right: 50px;
-            }
-            .socialheading {
-                left: 9%;
-            }
-            .new-members {
-                margin-left: -50px;
-            }
-            .act-flex-container {
-                top: -190px;
-                margin-left: 330px;
-            }
-            .act-flex-container .activity-data {
-                margin-bottom: 10px;
-            }
-            .contact-form {
-                top: 1%;
-                left: 10%;
-                width: 35%;
-            }
-            .contact-form h3 {
-                display: block;
-                top: -320px;
-                left: -50px;
-            }
-            #send {
-                margin-left: 0;
-                width: 360px;
-            }
-            .settings-container {
-                position: relative;
-                top: -160em;
-                left: 450px;
-                width: 10em;
-            }
-        }
+            @media (min-width: 1024px) {
+                #hr {
+                    right: -169px;
+                }
+                .appname {
+                    font-size: 30px;
+                    margin-right: 600px;
+                }
+                #navigation {
+                    position: fixed;
+                    top: 0;
+                    padding-top: 60px;
+                    z-index: -1;
+                    width: 70px;
+                    min-height: 100vh;
+                }
+                .nav-icons {
+                    flex-direction: column;
+                }
+                .dash {
+                    font-size: 18px;
+                    top: 80px;
+                    margin-left: 90px;
+                }
+                .wrap {
+                    top: 100px;
+                    left: 80%;
+                }
+                .messagebar-default {
+                    text-align: center;
+                    width: 70%;
+                    top: 2%;
+                    left: 8%;
+                }
+                .traffic-navigation {
+                    margin-right: -24%;
+                    margin-bottom: -2%;
+                }
+                #myChart {
+                    margin-left: -26%;
+                    max-height: 45vh;
+                    max-width: 45vw;
+                }
+                #myDoughnutChart {
+                    max-height: 60vh;
+                    max-width: 20vw;
+                    margin-top: -25%;
+                    margin-right: -60%;
+                }
+                .mobile {
+                    position: absolute;
+                    margin-right: -100%;
+                    top: -250px;
+                }
+                .daily {
+                    margin-left: 12%;
+                }
+                .social-widgets {
+                    flex-direction: row;
+                    justify-content: space-between;
+                }
+                .social-widgets li {
+                    margin-left: 50px;
+                    margin-right: 50px;
+                }
+                .socialheading {
+                    left: 9%;
+                }
+                .new-members {
+                    margin-left: -50px;
+                }
+                .act-flex-container {
+                    top: -190px;
+                    margin-left: 330px;
+                }
+                .act-flex-container .activity-data {
+                    margin-bottom: 10px;
+                }
+                .contact-form {
+                    top: 1%;
+                    left: 10%;
+                    width: 35%;
+                }
+                .contact-form h3 {
+                    display: block;
+                    top: -320px;
+                    left: -50px;
+                }
+                #send {
+                    margin-left: 0;
+                    width: 360px;
+                }
+                .settings-container {
+                    position: relative;
+                    top: -160em;
+                    left: 450px;
+                    width: 10em;
+                }
+                #notifications {
+                    left: 800px;
+                }
