--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -37,18 +37,19 @@
                               }
                               
                               .appname {
-                                  margin-left: -45px;
-                                  font-size: 20px;
+                                  margin-left: -40px;
+                                  ;
+                                  font-size: 18px;
                               }
                               
                               .userpic {
-                                  margin-left: 70%;
+                                  margin-left: 0;
                                   border-radius: 50%;
                                   width: 25px;
                               }
                               
                               .username {
-                                  margin-left: 20%;
+                                  margin-left: 0;
                               }
                               
                               #noti_Button {
