--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -128,7 +128,7 @@
                               
                               .mobile {
                                   position: absolute;
-                                  top: -200px;
+                                  top: 50px;
                                   left: -20%;
                               }
                               
@@ -683,7 +683,7 @@
                                       margin-left: 210px;
                                   }
                                   .mobile {
-                                      top: -460px;
+                                      top: 40px;
                                   }
                                   .socialheading {
                                       left: 340px;
@@ -814,13 +814,13 @@
                                   #myDoughnutChart {
                                       max-height: 60vh;
                                       max-width: 20vw;
-                                      margin-top: -250px;
+                                      margin-top: -285px;
                                       margin-right: -590px;
                                   }
                                   .mobile {
                                       position: relative;
-                                      margin-right: -1000px;
-                                      top: -220px;
+                                      top: -300px;
+                                      left: 300px;
                                   }
                                   .daily {
                                       margin-left: 12%;
